# clip-test-gui

./: .gitignore  README.md  app.py  pyproject.toml
