[project]
name = "clip"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kotomiya07", email = "115519148+Kotomiya07@users.noreply.github.com" }
]
dependencies = [
    "torch==2.4.1+cu124",
    "torchvision==0.19.1+cu124",
    "gradio>=5.6.0",
    "transformers>=4.46.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/clip"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
type = "index"
